--- a/index.html
+++ b/index.html
@@ -22,36 +22,30 @@
                         <p>Kapitelüberblick</p>
                     </div>
                     <div class="card-back">
-                        <p>Dieses Kapitel beleuchtet, wie Ent-hinderung unsere Perspektiven auf Teilhabe, Bildung und gesellschaftliches Miteinander verändern kann. Es fordert dazu auf, Barrieren in Köpfen und Institutionen abzubauen, echte Partizipation zu ermöglichen und Inklusion als grundlegendes Menschenrecht zu verstehen.</p>
+                        <p>Dieses Kapitel beleuchtet, wie Ent-hinderung unsere Perspektiven auf Teilhabe, Bildung 
+                            und gesellschaftliches Miteinander verändern kann. Es fordert dazu auf, Barrieren 
+                            in Köpfen und Institutionen abzubauen, echte Partizipation zu ermöglichen und 
+                            Inklusion als grundlegendes Menschenrecht zu verstehen.</p>
                     </div>
                 </div>
             </div>
             <!-- Alle anderen Karten in einer Reihe -->
             <div class="cards-row">
-                <div class="card">
-                    <div class="card-inner">
-                        <div class="card-front">
-                            <p>„Behindernd ist nicht die Person selbst, sondern die gesellschaftlichen Strukturen, die sie ausschließen.“</p>
-                            <div class="emoji">🚧</div>
-                        </div>
-                        <div class="card-back">
-                            <p>Reflexion: Ich sehe diese Barrieren besonders in ... (z. B. Schulen, Arbeitsplätzen). Mein Ziel ist es, ... (z. B. inklusive Ansätze) in meiner Arbeit umzusetzen.</p>
-                            <div class="emoji">💡</div>
-                        </div>
-                    </div>
-                </div>
-
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Wann immer ich in meinem Umkreis über Enthinderung spreche, treffe ich auf Unverständnis und fragende Blicke. Wenn ich
+                        <p>„Wann immer ich in meinem Umkreis über Enthinderung spreche, treffe ich auf 
+                            Unverständnis und fragende Blicke. Wenn ich
                             dann sage „Ja, es geht um einen anderen Blick auf Behinderung" – dann kommt
                             bei den meisten erst der erhellende Moment: „Ja, klar Be-hinderungspädagogik,
-                            also Inklusion … das sagt mir was"."</p>
+                            also Inklusion … das sagt mir was"." (Danz, 2023, S.15)</p>
                         <div class="emoji">🤷‍♀️</div>
                     </div>
                     <div class="card-back">
-                        <p>Leben in einer defizitorientierten Welt, in der Behinderung einfacher verständlich ist für die Mehrheit als Ent-hinderung</p>
+                        <p>Dieses Zitat zeigt mir, wie sehr Sprache unsere Wahrnehmung prägt, oft ohne dass 
+                            wir es merken. Begriffe wie ‚Be-hinderung‘ haben sich über die Zeit eingeschlichen 
+                            und verstärken unbewusst eine defizitorientierte Sichtweise. ‚Ent-hinderung‘ fordert
+                             dagegen einen bewussten Umgang mit Sprache und einen Perspektivwechsel.  </p>
                         <div class="emoji">🌟</div>
                     </div>
                 </div>
@@ -60,11 +54,18 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Die zentrale Frage der Ent-hinderung lautet: Wie wollen wir in Zukunft miteinander leben?"</p>
+                        <p>„Die zentrale Frage der Ent-hinderung lautet: Wie wollen wir in Zukunft miteinander 
+                            leben?" (Danz, 2023, S. 23)</p>
                         <div class="emoji">💡</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Für mich bedeutet diese Frage, eine Gesellschaft mitzugestalten, in der Unterschiede als Bereicherung gesehen werden. Welche konkreten Schritte kann ich in meinem Beruf gehen, um inklusives Handeln zu fördern?</p>
+                        <p>Dieses Zitat regt mich dazu an, über die Vision einer inklusiven Gesellschaft
+                             nachzudenken. Aus meiner Erfahrung weiß ich jedoch, dass nicht jede Behinderung 
+                             als Bereicherung empfunden werden kann – weder von der betroffenen Person noch von 
+                             der Gesellschaft. Für mich geht es darum, jedem Menschen den Raum zu geben, an
+                              dem er respektiert wird und eine für ihn sinnvolle Aufgabe findet. Eine Gesellschaft, 
+                              die Vielfalt nicht romantisiert, sondern pragmatisch handelt, um Menschen unabhängig 
+                              von ihren Einschränkungen ein würdiges Leben zu ermöglichen, ist mein Ziel.</p>
                         <div class="emoji">🤔</div>
                     </div>
                 </div>
@@ -73,11 +74,14 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Inklusive Bildung wird beispielsweise in der Agenda 2030 als viertes Ziel mit dem Titel ‚Hochwertige Bildung' in den Sustainable Development Goals (SDGs), den Nachhaltigkeitszielen der Vereinten Nationen (UN), gefordert."</p>
+                        <p>„Inklusive Bildung wird beispielsweise in der Agenda 2030 als viertes Ziel mit dem 
+                            Titel ‚Hochwertige Bildung' in den Sustainable Development Goals (SDGs), den 
+                            Nachhaltigkeitszielen der Vereinten Nationen (UN), gefordert." (Danz, 2023, S.25)</p>
                         <div class="emoji">🌍</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Bildung ist der Schlüssel für nachhaltige Entwicklung. Wie kann ich in meinem Beruf dazu beitragen, inklusive Bildung tatsächlich umzusetzen?</p>
+                        <p>Reflexion: Bildung ist der Schlüssel für nachhaltige Entwicklung. Wie kann ich in 
+                            meinem Beruf dazu beitragen, inklusive Bildung tatsächlich umzusetzen?</p>
                         <div class="emoji">📘</div>
                     </div>
                 </div>
@@ -86,11 +90,16 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Partizipation oder Teilhabe bedeuten in diesem Buch: dazugehören, dabei sein, mitgestalten, aber auch für sich selbst bestimmen können, die Wahl haben beziehungsweise auswählen können, wichtige Orte nutzen können, verschiedene Rollen übernehmen können, Einfluss nehmen und etwas beitragen dürfen."</p>
+                        <p>„Partizipation oder Teilhabe bedeuten in diesem Buch: dazugehören, dabei sein,
+                             mitgestalten, aber auch für sich selbst bestimmen können, die Wahl haben 
+                             beziehungsweise auswählen können, wichtige Orte nutzen können, verschiedene
+                             Rollen übernehmen können, Einfluss nehmen und etwas beitragen 
+                             dürfen."(Danz, 2023, S.28)</p>
                         <div class="emoji">🫂</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Partizipation ist vielschichtig. Wie können wir Räume schaffen, in denen alle Menschen aktiv teilhaben und für sich selbst bestimmen können?</p>
+                        <p>Reflexion: Partizipation ist vielschichtig. Wie können wir Räume schaffen, in denen
+                             alle Menschen aktiv teilhaben und für sich selbst bestimmen können?</p>
                         <div class="emoji">🎭</div>
                     </div>
                 </div>
@@ -99,11 +108,13 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Partizipation als echte Teilhabe braucht also Partnerschaft und passt nicht zu hierarchischen Modellen des Miteinanders."</p>
+                        <p>„Partizipation als echte Teilhabe braucht also Partnerschaft und passt nicht zu 
+                            hierarchischen Modellen des Miteinanders." (Danz, 2023, S.29)</p>
                         <div class="emoji">🤝</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Hierarchiefreiheit fordert uns heraus. Welche Partnerschaften können in meinem Beruf entstehen, um echte Teilhabe zu fördern?</p>
+                        <p>Reflexion: Hierarchiefreiheit fordert uns heraus. Welche Partnerschaften können
+                             in meinem Beruf entstehen, um echte Teilhabe zu fördern?</p>
                         <div class="emoji">🌟</div>
                     </div>
                 </div>
@@ -112,11 +123,15 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Eine partnerschaftliche Gesellschaftsform zu etablieren, die echte Partizipation ermöglicht, gleicht augenblicklich wohl eher einer Utopie. Es braucht eine entsprechende Bewusstseins-Bildung und insofern ist Ent-hinderung auch und vor allem ein Bildungsthema."</p>
+                        <p>„Eine partnerschaftliche Gesellschaftsform zu etablieren, die echte Partizipation
+                             ermöglicht, gleicht augenblicklich wohl eher einer Utopie. Es braucht eine
+                              entsprechende Bewusstseins-Bildung und insofern ist Ent-hinderung auch und 
+                              vor allem ein Bildungsthema." (Danz, 2023, S. 29)</p>
                         <div class="emoji">🌈</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Bildung ist der Schlüssel zu einer besseren Zukunft. Welche Methoden könnten eine Ent-hinderungs-Pädagogik greifbar machen?</p>
+                        <p>Reflexion: Bildung ist der Schlüssel zu einer besseren Zukunft. Welche Methoden 
+                            könnten eine Ent-hinderungs-Pädagogik greifbar machen?</p>
                         <div class="emoji">🧠</div>
                     </div>
                 </div>
@@ -125,11 +140,15 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>„Es gibt viele Arten der Be-hinderung. Es gibt körperliche und geistige Beeinträchtigungen. Aber auch arm zu sein, alt zu sein oder aus einem anderen Land zu kommen, kann eine Be-hinderung sein.“</p>
+                        <p>„Es gibt viele Arten der Be-hinderung. Es gibt körperliche und geistige
+                             Beeinträchtigungen. Aber auch arm zu sein, alt zu sein oder aus einem 
+                             anderen Land zu kommen, kann eine Be-hinderung sein.“ (Danz, 2023, S. 38)</p>
                         <div class="emoji">♿</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Behinderung ist viel mehr als körperliche Einschränkungen. Wie können wir gesellschaftliche Hindernisse abbauen, die Menschen durch Herkunft oder Status behindern?</p>
+                        <p>Reflexion: Behinderung ist viel mehr als körperliche Einschränkungen. Wie können 
+                            wir gesellschaftliche Hindernisse abbauen, die Menschen durch Herkunft oder
+                             Status behindern?</p>
                         <div class="emoji">🚪</div>
                     </div>
                 </div>
