--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
                         <div class="emoji">💡</div>
                     </div>
                     <div class="card-back">
-                        <p>Dieses Zitat regt mich dazu an, über die Vision einer inklusiven Gesellschaft
-                             nachzudenken. Aus meiner Erfahrung weiß ich jedoch, dass nicht jede Behinderung 
-                             als Bereicherung empfunden werden kann – weder von der betroffenen Person noch von 
-                             der Gesellschaft. Für mich geht es darum, jedem Menschen den Raum zu geben, an
-                              dem er respektiert wird und eine für ihn sinnvolle Aufgabe findet. Eine Gesellschaft, 
-                              die Vielfalt nicht romantisiert, sondern pragmatisch handelt, um Menschen unabhängig 
-                              von ihren Einschränkungen ein würdiges Leben zu ermöglichen, ist mein Ziel.</p>
+                        <p>Hier dachte ich viel über die Vision, über die Zukunft einer inklusiven Gesellschaft nach. 
+                            Aus Erfahrung weiß ich, dass nicht jede Behinderung als Bereicherung empfunden werden kann. 
+                            Entscheidend ist, dass jeder Mensch einen respektablen Platz findet, mit einer sinnvollen 
+                            Aufgabe und guter Versorgung. Eine Gesellschaft, die Vielfalt pragmatisch statt romantisierend 
+                            behandelt, kann allen ein würdiges Leben ermöglichen.</p>
                         <div class="emoji">🤔</div>
                     </div>
                 </div>
@@ -87,55 +85,6 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <p>„Partizipation oder Teilhabe bedeuten in diesem Buch: dazugehören, dabei sein,
-                             mitgestalten, aber auch für sich selbst bestimmen können, die Wahl haben 
-                             beziehungsweise auswählen können, wichtige Orte nutzen können, verschiedene
-                             Rollen übernehmen können, Einfluss nehmen und etwas beitragen 
-                             dürfen."(Danz, 2023, S.28)</p>
-                        <div class="emoji">🫂</div>
-                    </div>
-                    <div class="card-back">
-                        <p>Reflexion: Partizipation ist vielschichtig. Wie können wir Räume schaffen, in denen
-                             alle Menschen aktiv teilhaben und für sich selbst bestimmen können?</p>
-                        <div class="emoji">🎭</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <p>„Partizipation als echte Teilhabe braucht also Partnerschaft und passt nicht zu 
-                            hierarchischen Modellen des Miteinanders." (Danz, 2023, S.29)</p>
-                        <div class="emoji">🤝</div>
-                    </div>
-                    <div class="card-back">
-                        <p>Reflexion: Hierarchiefreiheit fordert uns heraus. Welche Partnerschaften können
-                             in meinem Beruf entstehen, um echte Teilhabe zu fördern?</p>
-                        <div class="emoji">🌟</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <p>„Eine partnerschaftliche Gesellschaftsform zu etablieren, die echte Partizipation
-                             ermöglicht, gleicht augenblicklich wohl eher einer Utopie. Es braucht eine
-                              entsprechende Bewusstseins-Bildung und insofern ist Ent-hinderung auch und 
-                              vor allem ein Bildungsthema." (Danz, 2023, S. 29)</p>
-                        <div class="emoji">🌈</div>
-                    </div>
-                    <div class="card-back">
-                        <p>Reflexion: Bildung ist der Schlüssel zu einer besseren Zukunft. Welche Methoden 
-                            könnten eine Ent-hinderungs-Pädagogik greifbar machen?</p>
-                        <div class="emoji">🧠</div>
-                    </div>
-                </div>
-            </div>
 
             <div class="card">
                 <div class="card-inner">
