--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-front">
                         <p>„Die zentrale Frage der Ent-hinderung lautet: Wie wollen wir in Zukunft miteinander 
                             leben?" (Danz, 2023, S. 23)</p>
-                        <div class="emoji">💡</div>
+                        <div class="emoji">🪴</div>
                     </div>
                     <div class="card-back">
                         <p>Hier dachte ich viel über die Vision, über die Zukunft einer inklusiven Gesellschaft nach. 
@@ -78,9 +78,11 @@
                         <div class="emoji">🌍</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Bildung ist der Schlüssel für nachhaltige Entwicklung. Wie kann ich in 
-                            meinem Beruf dazu beitragen, inklusive Bildung tatsächlich umzusetzen?</p>
-                        <div class="emoji">📘</div>
+                        <p>Dieses Zitat erinnert mich daran, wie ambitioniert die Ziele der Agenda 2030 sind. 
+                            Seit ihrer Formulierung 2015 hat sich einiges verbessert, doch es bleibt viel zu tun,
+                            insbesondere bei der Inklusion. Mit weniger als sechs Jahren bis 2030 ist klar, dass
+                             mehr Anstrengungen nötig sind.</p>
+                        <div class="emoji">🎯</div>
                     </div>
                 </div>
             </div>
@@ -95,10 +97,12 @@
                         <div class="emoji">♿</div>
                     </div>
                     <div class="card-back">
-                        <p>Reflexion: Behinderung ist viel mehr als körperliche Einschränkungen. Wie können 
-                            wir gesellschaftliche Hindernisse abbauen, die Menschen durch Herkunft oder
-                             Status behindern?</p>
-                        <div class="emoji">🚪</div>
+                        <p>Dieses Zitat spricht mich persönlich an, da ich erlebt habe, wie hart es 
+                            ist, arm zu sein. Die Gesellschaft tut oft wenig, um solche Situationen 
+                            abzumildern, und stattdessen verstärken Vorurteile und Ausschlüsse die 
+                            Belastung. Ich sehe, wie Armut genauso wie Behinderung Barrieren schafft, 
+                            die Menschen daran hindern, sich frei zu entfalten. </p>
+                        <div class="emoji">🕊️</div>
                     </div>
                 </div>
             </div>
