--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 </section>
 </main>
 <footer>
+    <p>Danz, S. (2023). Ent-hinderung: Ein Leitfaden (1. Auflage). Juventa Verlag.</p>
 <p>&copy; 2024 Sharon Mabel Pierre</p>
 </footer>
 <script src="script.js"></script>
